--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.3",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie": "^0.5.0",
+    "lodash": "^4.17.21",
     "mysql2": "^3.6.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
